Blog page scrollbar and social icons fix

--- a/blogpagestyle.css
+++ b/blogpagestyle.css
@@ -34,6 +34,28 @@ body {
 body::-webkit-scrollbar {
   display: none;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #064b10;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+  color: none;
+  background-color: none;
+  display: none;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: grey;
+  border-radius: 10px;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(192, 223, 100);
+}
 body {
   scrollbar-width: none;
 }
@@ -433,6 +455,10 @@ nav {
 .footer-text {
   text-align: center;
   margin-top: 10px;
+}
+.socialIcons a:hover
+{
+  transform: scale(1.3);
 }
 @media (max-width: 991px) {
   .footer {
